# sprout

./: Cargo.toml  README.md
src/: android_install.sh  android_virtualizer.rs  arch_install.sh  main.rs  theme.rs
