[package]
name = "sprout"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[dependencies]
winit = "0.25"
wgpu = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
palette = "0.5"
rand = "0.8"
tauri = { version = "1.0" }
android-ndk = "0.5"
ndk-sys = "0.2"
ndk-glue = "0.2"

[build-dependencies]
tauri-build = { version = "1.0" }
